# Agentic_RAG_Crew_AI

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/agentic_rag/: crew.py  main.py
src/agentic_rag/config/: agents.yaml  tasks.yaml
src/agentic_rag/tools/: rag_tool.py
